[package]
name = "nugit"
version = "0.1.0"
authors = ["Jay <jay@meangrape.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.6", default-features = true }
zstd = "0.4.22+zstd.1.3.8"
snappy = "0.4.0"
im = "12.3.1"
meowhash = "0.1.2"
rustls = "0.15.1"
mio = "0.6.16"
ed25519-dalek = "0.9.1"
